1. Added JavaScript caching 2. Fixed z-index bugs in css 3. Completed confirm view TODO fetching results

--- a/css/template.css
+++ b/css/template.css
@@ -24,6 +24,7 @@ strong
     padding: 0;
     margin: 0;
     display: none;
+    z-index: 1;
 }
 
 #modal
@@ -39,6 +40,7 @@ strong
     display: none;
     overflow-y: scroll;
     overflow-x: hidden;
+    z-index: 2;
 }
 
 #responce
